{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 91,
  "lineage": "f9aff354-8365-fcb5-b65e-d48f37da7426",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "test-terraform-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254753841475:route-table/rtb-0d6aadf64b73ac236",
            "default_route_table_id": "rtb-0d6aadf64b73ac236",
            "id": "rtb-0d6aadf64b73ac236",
            "owner_id": "254753841475",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06fdb1e205760d1d1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-terraform-rt"
            },
            "vpc_id": "vpc-0a207d356b86322f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test-terraform-ig",
            "aws_vpc.test-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-terraform-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e87074e52e6c9f9",
            "arn": "arn:aws:ec2:us-east-1:254753841475:instance/i-0a571272ba769edd3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a571272ba769edd3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b7c3d7cb3856f8fd",
            "private_dns": "ip-172-16-1-200.ec2.internal",
            "private_ip": "172.16.1.200",
            "public_ip": "3.86.232.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-087b211d14176bd83",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de52e6209fef6f6a",
            "tags": {
              "Name": "test-terraform-ec2",
              "terraform": "True"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08e965b8133197c1f"
            ]
          },
          "dependencies": [
            "aws_security_group.test-terraform-sg",
            "aws_subnet.test-terraform-subnet",
            "aws_vpc.test-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-terraform-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254753841475:internet-gateway/igw-06fdb1e205760d1d1",
            "id": "igw-06fdb1e205760d1d1",
            "owner_id": "254753841475",
            "tags": {
              "Name": "test-terraform-ig"
            },
            "vpc_id": "vpc-0a207d356b86322f6"
          },
          "dependencies": [
            "aws_vpc.test-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-terraform-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254753841475:security-group/sg-08e965b8133197c1f",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e965b8133197c1f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "test-terraform-sg",
            "name_prefix": "",
            "owner_id": "254753841475",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-terraform-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a207d356b86322f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-terraform-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254753841475:subnet/subnet-0de52e6209fef6f6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-0de52e6209fef6f6a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "254753841475",
            "tags": {
              "Name": "test-terraform-subnet"
            },
            "tags_all": {
              "Name": "test-terraform-subnet"
            },
            "vpc_id": "vpc-0a207d356b86322f6"
          },
          "dependencies": [
            "aws_vpc.test-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254753841475:vpc/vpc-0a207d356b86322f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-075868b4d7bb21c70",
            "default_route_table_id": "rtb-0d6aadf64b73ac236",
            "default_security_group_id": "sg-062bb4aca86b059da",
            "dhcp_options_id": "dopt-acd586d6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a207d356b86322f6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d6aadf64b73ac236",
            "owner_id": "254753841475",
            "tags": {
              "Name": "test-terraform-vpc"
            },
            "tags_all": {
              "Name": "test-terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}